fix size for socmed link on mobile size

--- a/style.css
+++ b/style.css
@@ -251,6 +251,12 @@ header {
   margin: 0 2rem;
 }
 
+@media screen and (max-width: 768px) {
+  .socmed link {
+    font-size: 1rem;
+  }
+}
+
 /* FOOTER */
 footer {
   height: 10vh;
